# incident-response

./: .env.example  .gitignore  README.md  incidents.db  pyproject.toml
docs/testing/: console-demo-alert.tdd.md  console-incident-detail.tdd.md  console-incident-resolve.tdd.md  console-runbook-preview.tdd.md  console-triage-auto-refresh.tdd.md
runbooks/: auth-latency.md  checkout-error-rate.md  redis-connection-storm.md
src/incident_response/: __init__.py  cli.py  config.py  console.py  db.py  dedup.py  executor.py  history.py  logging_config.py  main.py  models.py  orchestrator.py  pr_annotation.py  queue.py  rate_limit.py  retry.py  runbooks_loader.py  security.py  telemetry.py  verification.py
src/incident_response.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/incident_response/agents/: brief.py  impact.py  llm.py  postmortem.py  runbook.py  triage.py
src/incident_response/integrations/: github.py  metrics.py  slack.py
src/incident_response/static/: console.css
tests/: conftest.py  test_brief.py  test_console.py  test_db.py  test_dedup.py  test_demo_mode.py  test_executor.py  test_history.py  test_impact_agent.py  test_incidents_api.py  test_llm_json.py  test_logging.py  test_orchestrator.py  test_orchestrator_dedup.py  test_orchestrator_features.py  test_pr_annotation.py  test_queue.py  test_rate_limit.py  test_retry.py  test_runbook_agent.py  test_runbooks_loader.py  test_security.py  test_slack_streaming.py  test_streaming_brief.py  test_triage_agent.py  test_verification.py  test_webhook.py  test_webhook_auth.py
